--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.13.1",
     "gatsby-plugin-image": "^3.13.0",
+    "gatsby-plugin-mdx": "^5.13.0",
     "gatsby-plugin-react-helmet": "^6.13.0",
     "gatsby-plugin-sharp": "^5.13.0",
     "gatsby-plugin-sitemap": "^6.13.0",
