--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.13.1",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^3.13.0",
-    "gatsby-plugin-mdx": "^5.13.0",
+    "gatsby-plugin-mdx": "^5.13.1",
     "gatsby-plugin-react-helmet": "^6.13.0",
-    "gatsby-plugin-sharp": "^5.13.0",
+    "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.13.0",
-    "gatsby-source-filesystem": "^5.13.0",
-    "gatsby-transformer-sharp": "^5.13.0",
+    "gatsby-remark-images": "^7.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
